# CompGeometry

./: .gitignore  README.md
01_convexHull/: 01_incremental_approach.cpp  a.out
02_line_sweep/: 01_intersection_point.cpp  01_line_sweep.cpp  02_line_sweep.cpp  a.out  noname.cpp
03_ray_tracing/01_line-triangle-intersection/: CMakeLists.txt
03_ray_tracing/01_line-triangle-intersection/src/: main.cpp
03_ray_tracing/02_point_inside_stl/: CMakeLists.txt
03_ray_tracing/02_point_inside_stl/include/: geometry_utility.h
03_ray_tracing/02_point_inside_stl/src/: VTKReader.cpp  VTKReader.h  main.cpp  sphere.vtk
03_ray_tracing/line-triangle-intersection/include/: geometry_utility.h
03_ray_tracing/line-triangle-intersection/src/: main.cpp
04_nearest_point/: CMakeLists.txt
04_nearest_point/src/: main.cpp
05_1D_range_search /: a.out  main.cpp
convexHull/: convexHull.txt  plotHull.py
